add enpoints for 1. question/questionId/answers 2. answer/answerId/upvote 3.answer/answerId/downvote
